styling: group conversation header should include subject-ish

--- a/clients/mobileui/style.less
+++ b/clients/mobileui/style.less
@@ -1288,7 +1288,21 @@ html[xmlns] .cf {
 }
 
 .gcd-header {
-  margin-top: 6px;
+  background-color: #eee;
+}
+
+.gcd-subjectRow {
+  padding: 4px;
+}
+.gcd-subject {
+  font-size: 140%;
+  font-weight: bold;
+  display: inline-block;
+  width: 90%;
+  .overflow;
+}
+.gcd-editSubject {
+  vertical-align: top;
 }
 
 .gcd-participants {
